<resources>
    <string name="app_name">eMovie</string>
    <string name="title_tendencia">Tendencia</string>
    <string name="title_upcoming">Próximos estrenos</string>
    <string name="title_app">eMovie</string>
    <string name="recomendados">Recomendados Para Ti</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ver_trailer">Ver trailer</string>
    <string name="atencion">Atención</string>
    <string name="movie_without_trailer">La pelicula no tiene trailer oficial</string>
    <string name="aceptar">Aceptar</string>
    <string name="error">Error</string>
    <string name="movie_no_has_videos">La pelicula no tiene videos a reproducir</string>
    <string name="cerrar">Cerrar</string>
    <string name="no_info">No hay información</string>
    <string name="text_info_ubicacion_encedida">Asegurate de tener tu ubicacion encedida para continuar</string>
    <string name="info_no_google_services">Servicios de Google No disponibles</string>
    <string name="title_historial">Historial</string>
    <string name="tv_info_latitud">Latitud:\n%1$.4f</string>
    <string name="tv_info_longitud">Longitud:\n%1$.4f</string>
    <string name="content_description_continuar_mapa">Continuar al mapa</string>
    <string name="text_error_consultar_datos">Error al consultar datos</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_movies">Peliculas</string>
    <string name="menu_location">Ubicacion</string>
    <string name="menu_gallery">Galeria</string>
    <string name="content_description_subir_foto">Subir una foto</string>
    <string name="content_description_buscar_imagen">Buscar imagen</string>
    <string name="text_upload_image">Subir imagen</string>
    <string name="content_description_imagen_seleccionada">Imagen seleccionada</string>
    <string name="upload">Subir</string>
    <string name="content_description_cerrar_dialogo">Cerrar dialogo</string>
    <string name="text_title_delete_picture">¿Eliminar imagen?</string>
    <string name="text_message_delete_picture">La imagen sera eliminada permanentemente</string>
    <string name="text_delete">Eliminar</string>
    <string name="text_message_success_delete_picture">Imagen eliminada exitosamente</string>
    <string name="text_message_error_delete_image">Error al eliminar imagen, vuelva a intentar</string>
    <string name="popular">Popular</string>
    <string name="nombre">Nombre: %s</string>
    <string name="usuario">Usuario: %s</string>
    <string name="text_error_no_session">Para continuar en esta sección debe de inciar sesión desde el apartado de Perfil.</string>
    <string name="text_de_acuerdo">De acuerdo</string>
    <string name="content_description_add_favorites">Añadir a favoritos</string>
    <string name="adde_to_favorites">Agregado a favoritos</string>
    <string name="deleted_to_favorites">Eliminado de favoritos</string>
    <string name="title_mis_favoritos">Mis favoritos</string>
    <string name="location_updated">Ubicación actualizada</string>
</resources>