<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/M16DP"
        android:layout_margin="@dimen/M16DP"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                android:layout_marginTop="@dimen/M16DP"
                android:layout_marginEnd="@dimen/M16DP"
                android:contentDescription="@string/content_description_cerrar_dialogo"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_upload_image"
                style="@style/TextViewTitles"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/image_selected"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/M16DP"
                android:background="@color/gray"
                android:contentDescription="@string/content_description_imagen_seleccionada"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
                app:layout_constraintDimensionRatio="16:9"/>

            <ImageButton
                android:id="@+id/btn_search_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_image_search"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/content_description_buscar_imagen"
                app:layout_constraintStart_toStartOf="@id/image_selected"
                app:layout_constraintEnd_toEndOf="@id/image_selected"
                app:layout_constraintTop_toTopOf="@id/image_selected"
                app:layout_constraintBottom_toBottomOf="@id/image_selected"/>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progress_bar_upload_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/M16DP"
                android:layout_marginHorizontal="@dimen/M16DP"
                android:visibility="gone"
                tools:visibility="visible"
                tools:progress="50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_selected"/>

            <TextView
                android:id="@+id/tv_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/M16DP"
                android:layout_marginHorizontal="@dimen/M16DP"
                tools:text="Subiendo.. 75%"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/progress_bar_upload_image" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_button_close"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/M16DP"
                app:backgroundTint="@color/teal_200"
                android:padding="@dimen/M16DP"
                app:cornerRadius="10dp"
                tools:text="@string/cerrar"
                android:textAllCaps="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_progress"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
        
        
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>