<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black">

    <TextView
        android:id="@+id/tv_profile_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_profile"
        style="@style/TextViewTitles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/image_avatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginStart="@dimen/M16DP"
        android:layout_marginTop="@dimen/M16DP"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile_title"/>

    <TextView
        android:id="@+id/tv_user"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/usuario"
        android:textColor="@color/white"
        android:layout_marginHorizontal="@dimen/M16DP"
        app:layout_constraintStart_toEndOf="@id/image_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/image_avatar" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/nombre"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/M16DP"
        app:layout_constraintStart_toStartOf="@id/tv_user"
        app:layout_constraintEnd_toEndOf="@id/tv_user"
        app:layout_constraintTop_toBottomOf="@id/tv_user" />

    <TextView
        android:id="@+id/tv_title_my_favorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_mis_favoritos"
        style="@style/TextViewSubTitles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_avatar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_my_favorites">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_my_favorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top_recycler"
            android:orientation="horizontal"
            tools:itemCount="5"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/movie_item" />

        <include
            android:id="@+id/loader_item_my_favorites_movies"
            layout="@layout/loader_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top_recycler"
            android:visibility="gone" />

        <include
            android:id="@+id/no_data_item_my_favorites_movies"
            layout="@layout/layout_no_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginTop="@dimen/margin_top_recycler"
            android:visibility="gone" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>