<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/root_scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/linear_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_app"
                    style="@style/TextViewTitles" />

                <TextView
                    android:id="@+id/tv_title_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_upcoming"
                    style="@style/TextViewSubTitles"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_upcoming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/margin_top_recycler"
                    android:orientation="horizontal"
                    tools:itemCount="5"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/movie_item" />

                <include
                    android:id="@+id/loader_item_upcoming_movies"
                    layout="@layout/loader_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/margin_top_recycler"
                    android:visibility="gone" />

                <include
                    android:id="@+id/no_data_item_upcoming_movies"
                    layout="@layout/layout_no_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/margin_top_recycler"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_title_top_rated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_tendencia"
                    style="@style/TextViewSubTitles"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_top_rated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/margin_top_recycler"
                    android:orientation="horizontal"
                    tools:itemCount="5"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/movie_item" />

                <include
                    android:id="@+id/loader_item_toprated_movies"
                    layout="@layout/loader_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/margin_top_recycler"
                    android:visibility="gone" />

                <include
                    android:id="@+id/no_data_toprated_movies"
                    layout="@layout/layout_no_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/margin_top_recycler"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_title_recomendados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/popular"
                    style="@style/TextViewSubTitles"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view_recomendaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/margin_top_recycler"
                    android:orientation="horizontal"
                    tools:itemCount="5"
                    tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/movie_item" />

                <include
                    android:id="@+id/loader_popular_movies"
                    layout="@layout/loader_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/margin_top_recycler"
                    android:visibility="gone" />

                <include
                    android:id="@+id/no_data_popular_movies"
                    layout="@layout/layout_no_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_start"
                    android:layout_marginTop="@dimen/margin_top_recycler"
                    android:visibility="gone" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</androidx.constraintlayout.widget.ConstraintLayout>